[package]
name = "radell-web-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
serde = "1.0.164"
serde_json = "1.0.99"
shuttle-axum = "0.20.0"
shuttle-runtime = "0.20.0"
tokio = { version = "1.29.0", features = ["full"] }
